# ctcr_casadi

./: .gitignore  CMakeLists.txt  README.md
ctcr_casadi_wrappers/: BlackboxConstr.cpp  BlackboxConstr.hpp  BlackboxConstrJacobian.cpp  BlackboxConstrJacobian.hpp  BlackboxConstrYu0.cpp  BlackboxConstrYu0.hpp  CMakeLists.txt
demo/: 001_model_computation.cpp  002_control_line.cpp  003_timing_IVP.cpp  016_casadi_mpc_exact.cpp  016_control_casadi_mpc_base.cpp  017_casadi_mpc_jacobian.cpp  017_refactor_code_mpc_with_jac.cpp  018_control_casadi_mpc_yu0.cpp  021_exact_reform_decision_var_.cpp  023_yu0_reform_variables_p_rate_limite.cpp  CMakeLists.txt
parameters/: parameters.csv
src/: ComputeIvpJacobianMatrices.cpp  ComputeIvpJacobianMatrices.h  CtrModel.cpp  CtrModel.h  bcError.cpp  bcError.h  ctrConstants.h  loadParameters.cpp  loadParameters.h  mathOperations.cpp  mathOperations.h  odeCtr.cpp  odeCtr.h  odeIntCtrRK4.cpp  odeIntCtrRK4.h  pinv.h  plotCtr.cpp  plotCtr.h  se3Operations.cpp  se3Operations.h  segmenting.cpp  segmenting.h  solveIVP.cpp  solveIVP.h
